--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.87.1",
     "@types/uuid": "^10.0.0",
-    "dynamic-vietqr": "^0.0.81",
+    "@vercel/speed-insights": "^1.3.1",
     "next": "16.0.10",
     "next-intl": "^4.5.8",
     "react": "19.2.1",
